Force React to 19 until the migration is done to avoid orphan deps.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -48,6 +48,8 @@ onlyBuiltDependencies:
   - supabase
 
 overrides:
+  'react': ^19.0.0
+  'react-dom': ^19.0.0
   '@react-router/dev>vite-node': 3.2.4
   '@redocly/respect-core>form-data': ^4.0.4
   '@supabase/supabase-js>@supabase/auth-js': 'catalog:'
